--- a/components/Score.module.css
+++ b/components/Score.module.css
@@ -1,8 +1,11 @@
 .score {
   background: #6D8398;
   color: #fff;
-  display: inline-block;
-  padding: 20px 15px;
+  display: table-cell;
+  height: 50px;
+  width: 50px;
   font-weight: bold;
   border-radius: 100%;
+  text-align: center;
+  vertical-align: middle;
 }
